fix: overflowing price table on galaxy s10

--- a/style.css
+++ b/style.css
@@ -64,6 +64,9 @@
     text-transform: uppercase;
 }
 
+.table {
+    table-layout: auto;
+}
 
 .table-bordered{
     border: 4px solid black;
@@ -72,7 +75,7 @@
 .table th {
     text-align: center;
     text-transform: uppercase;
-    font-size: 1.75em;
+    font-size: 1.55em;
     background: linear-gradient(to bottom, #e60000 0%, #ad0000 100%);
     color: white;
 
@@ -82,13 +85,17 @@ tr{
     text-align: center;
 }
 
+tr:nth-child(2n + 1) td {
+    background-color: lightgrey;
+}
+
 td {
     font-size: 30px;
 }
 
 .kontajner{
     background: linear-gradient(to bottom, #e60000 0%, #ad0000 12%);;
-    padding: 20px;
+    padding: 10px;
 }
 
 .nadpis {
